apps/banking-ai-assistant/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: banking-ai-assistant

spec:
  selector:
    app: banking-ai-assistant

  ports:
    - port: 80
      targetPort: 8000

  type: ClusterIP
